--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=YummyRest
-server.port=8080
+server.port=8081
 
 # Spring data Config
 spring.datasource.url=jdbc:mysql://localhost:3306/ESDYummy?createDatabaseIfNotExist=true
-spring.datasource.username=prashantjain
-spring.datasource.password=prashantjain
+spring.datasource.username=root
+spring.datasource.password=NewPassword
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
